--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,5 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+Try = "bf1d0ff0-c4a9-496b-85f0-2b0d71c4f32a"
+TryExperimental = "ae3b139e-64da-4858-8f55-5617df0d650e"
