--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Try"
 uuid = "bf1d0ff0-c4a9-496b-85f0-2b0d71c4f32a"
 authors = ["Takafumi Arakaki <aka.tkf@gmail.com> and contributors"]
-version = "0.1.1"
+version = "0.1.2-DEV"
 
 [compat]
 julia = "1.6"
